--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
     <div class="container">
         <h3>Binary-Decimal Converter</h3>
         <div class="inputs">
-            <input type="number">
-            <input type="number">
+            <div>
+                <label>Decimal</label>
+                <input type="number" id="decimal-input">
+            </div>
+            <div>
+                <label>Binary</label>
+                <input type="number" id="binary-input">
+            </div>            
         </div>
+        <p id="error-msg"></p>
     </div>
     
     <script src="index.js"></script>
